Fixed problem on IE7,8 not displaying the index list

--- a/css/index.css
+++ b/css/index.css
@@ -28,12 +28,7 @@ body{
 {
     margin: 0 auto;
     text-align: center;
-    height:100%;
+    height:800px;
     width:100%;
     position: relative;
-}
-
-.wrapper
-{
-    overflow: hidden;
 }
